# project-tkd

./: .gitignore  Cargo.toml  shell.nix
src/: clock.rs  main.rs  panel.rs
src/audio/: mod.rs  music.rs
