[package]
name = "project-tab"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["smol", "image"]}
smol = "*"
futures = "*"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "std"] }

zbus = { version = "5.7.1", default-features = false, features = ["tokio"] }

anyhow = "1.0.98"

